--- a/archons.html
+++ b/archons.html
@@ -35,8 +35,8 @@
             </p>
         </div>
         <div class="vepi">
-            <img src="/Image/venti-Photoroom.png" class="vepi1">
-            <img src="/Image/—Pngtree—bottom black shadow overlay gradient_7273428.png" class="vepi2">
+            <img src="Image/venti-Photoroom.png" class="vepi1">
+            <img src="Image/—Pngtree—bottom black shadow overlay gradient_7273428.png" class="vepi2">
         </div>
         <div class="zhongli">
             <h1>02</h1>
@@ -52,8 +52,8 @@
                 by the name Zhongli.
         </div>
         <div class="hehe">
-            <img src="/Image/1345107-ai-brush-removebg-7a9fim87aa.png" class="john">
-            <img src="/Image/—Pngtree—bottom black shadow overlay gradient_7273428.png" class="john2">
+            <img src="Image/1345107-ai-brush-removebg-7a9fim87aa.png" class="john">
+            <img src="Image/—Pngtree—bottom black shadow overlay gradient_7273428.png" class="john2">
         </div>
         <div class="raiden">
             <h1>03</h1>
@@ -67,8 +67,8 @@
             </p>
             </div>
             <div class="rai">
-                <img src="/Image/download-removebg-preview.png" class="rai1">
-                <img src="/Image/—Pngtree—bottom black shadow overlay gradient_7273428.png" class="rai2">
+                <img src="Image/download-removebg-preview.png" class="rai1">
+                <img src="Image/—Pngtree—bottom black shadow overlay gradient_7273428.png" class="rai2">
             </div>
 
         <div class="nahida">
@@ -85,8 +85,8 @@
             </p>
         </div>
         <div class="nah">
-            <img src="/Image/Genshin-nahida-full-2.png" class="nah1">
-            <img src="/Image/—Pngtree—bottom black shadow overlay gradient_7273428.png" class="nah2">
+            <img src="Image/Genshin-nahida-full-2.png" class="nah1">
+            <img src="Image/—Pngtree—bottom black shadow overlay gradient_7273428.png" class="nah2">
         </div>
         <div class="furina">
             <h1>05</h1>
@@ -104,8 +104,8 @@
             </p>
         </div>
         <div class="fu">
-            <img src="/Image/furina1-removebg-preview.png" class="fu1">
-            <img src="/Image/—Pngtree—bottom black shadow overlay gradient_7273428.png" class="fu2">
+            <img src="Image/furina1-removebg-preview.png" class="fu1">
+            <img src="Image/—Pngtree—bottom black shadow overlay gradient_7273428.png" class="fu2">
         </div>
         <div class="mavuika">
             <h1>06</h1>
@@ -121,8 +121,8 @@
             </p>
         </div>
         <div class="mav">
-            <img src="/Image/cce07a38653bc77eac8e73e512edc92e-removebg-preview.png" class="mav1">
-            <img src="/Image/—Pngtree—bottom black shadow overlay gradient_7273428.png" class="mav2">
+            <img src="Image/cce07a38653bc77eac8e73e512edc92e-removebg-preview.png" class="mav1">
+            <img src="Image/—Pngtree—bottom black shadow overlay gradient_7273428.png" class="mav2">
         </div>
         <div class="tsaritsa">
             <h1>07</h1>
@@ -134,8 +134,8 @@
             </p>
         </div>
         <div class="tsa">
-            <img src="/Image/tsaritsa.png" class="tsa1">
-            <img src="/Image/—Pngtree—bottom black shadow overlay gradient_7273428.png" class="tsa2">
+            <img src="Image/tsaritsa.png" class="tsa1">
+            <img src="Image/—Pngtree—bottom black shadow overlay gradient_7273428.png" class="tsa2">
         </div>
     </body>
 </html>
