--- a/first.html
+++ b/first.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Genshin</title>
-        <link rel="stylesheet" href="/first.css">
+        <link rel="stylesheet" href="first.css">
     </head>
     <body>
         <header>
