--- a/story.html
+++ b/story.html
@@ -2,7 +2,7 @@
     <head>
         <title>story Genshin</title>
 
-        <link rel="stylesheet" href="/story.css">
+        <link rel="stylesheet" href="story.css">
     </head>
     <body>
         <div class="intro">
